# Sentience

./: CMakeLists.txt  README.md  basefun.py  basic.py  builtinfun.py  compiler_main.cpp  constants.py  demo.ml  demo_compiler.py  errors.py  grammar.txt  interpreter.py  lexer.py  parser.py  shell.py  simple_demo.py  test.scratch  test_ai.scratch  tox.ini  values.py
compiler/: CMakeLists.txt  ast_visitor.cpp  ast_visitor.h  code_generator.cpp  code_generator.h  compiler.cpp  compiler.h  runtime.cpp  runtime.h
core/: ai_nodes.py  ai_runtime.py  interpreter.py  lexer.py  nodes.py  parser.py  values.py
execution/: run_script.py  runtime.py  shell.py
functions/: basefun.py  builtinfun.py
utils/: constants.py  errors.py
